@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix folder creation under public namespace root (#1488665)
 - Fix so "Edit as new" on draft creates a new message (#1488687)
 - Fix invalid error message on deleting mail from read only folder (#1488694)
 - Fix error where session wasn't updated after folder rename/delete (#1488692)
